--- a/src/tests/TestWhere/CMakeLists.txt
+++ b/src/tests/TestWhere/CMakeLists.txt
@@ -5,7 +5,7 @@ project(TestWhere LANGUAGES CXX)
 enable_testing()
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Test)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Test)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Test Gui)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -17,5 +17,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(TestWhere tst_testwhere.cpp)
 add_test(NAME TestWhere COMMAND TestWhere)
 
-target_link_libraries(TestWhere PRIVATE Qt${QT_VERSION_MAJOR}::Test proxyorm)
+target_link_libraries(TestWhere PRIVATE Qt${QT_VERSION_MAJOR}::Test Qt${QT_VERSION_MAJOR}::Gui proxyorm)
 
