feat: join indexed

--- a/src/proxyorm/CMakeLists.txt
+++ b/src/proxyorm/CMakeLists.txt
@@ -32,6 +32,8 @@ add_library(proxyorm STATIC
     proxyormmodel.h
     proxyormvalue.cpp
     proxyormvalue.h
+    indexedabstractmodel.h
+    joinindexed.h joinindexed.cpp
 )
 
 cmake_minimum_required(VERSION 3.16)
